--- a/proyecto/Week-06/views/login.html
+++ b/proyecto/Week-06/views/login.html
@@ -12,7 +12,40 @@
     </head>
     <body>
         <header class="blue-section header">
-            <img src="/proyecto/assets/images/Logo.png" alt="Megarocket-icon" class="landing" id="home"/>
+            <img src="/proyecto/assets/images/Logo.png" alt="Megarocket-icon"/>
         </header>
+        <main class="main">
+            <div class="main-draw">
+                <img src="" alt="back-button" id="home-page" href="/proyecto/Week-06/views/index.html">
+                <h1>
+                    Sign in
+                </h1>
+                <form class="form">
+                    <div class="mail-form">
+                        <img src="/proyecto/assets/images/envelope.png" alt="Email-icon" class="img-form">
+                        <input type="email" id="mail" name="E-mail" placeholder="Complete your e-mail">
+                    </div>
+                    <div class="password-form">
+                        <img src="" alt="lock-password-icon" class="img-form">
+                        <input type="password" id="password" name="password" placeholder="Input your password" >                        
+                    </div>
+                    <p class="forgot-pass">
+                        <a href=""></a>
+                        Have you forgot your password?
+                    </p>
+                    <p>
+                        Don't have an account?
+                    </p>
+                    <p class="member-link">
+                        Click here to become a member
+                    </p>                    
+                    <div class="checkbox-remember">
+                        <input type="checkbox" id="remember-me" name="remember-me" value="yes-remember-me">
+                        <label for="remember-me"> Remember me</label>    
+                    </div>
+                    <input type="button" value="button" class="continue-button">
+                </form> 
+            </div>
+        </main>
     </body>
 </html>
